--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "short_name": "Mapillary",
     "homepage_url": "https://www.mapillary.com/",
     "author": "Mapillary",
-    "version": "1.0.8",
+    "version": "1.0.11",
     "description": "Explore the world with Mapillary street photos.",
     "chrome_url_overrides" : {
         "newtab": "index.html"
@@ -12,5 +12,11 @@
     "icons": {
         "128": "/img/mpy_chrome_logo.png"
     },
+    "applications": {
+        "gecko": {
+          "id": "mapillary-browser-extension@mapillary.com",
+          "strict_min_version": "45.0"
+        }
+      },
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
