--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "mapillary",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "Mapillary Chrome extension",
   "devDependencies": {
-    "lite-server": "^2.2.0"
+    "lite-server": "2.2.0",
+    "node-fetch": "2.3.0",
+    "web-ext": "2.9.1"
   },
   "scripts": {
-    "start": "npm run lite",
+    "download": "node tools/download.js",
+    "firefox": "web-ext run --firefox=firefoxdeveloperedition",
+    "start": "$npm_execpath run lite",
     "lite": "lite-server"
   }
 }
